Update photo captions content

--- a/app/views/photo/how-to-take-a-photo.html
+++ b/app/views/photo/how-to-take-a-photo.html
@@ -18,7 +18,7 @@
         <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/image-m2-plain.jpg" alt="">
-                <p class="result approved">Approved</p>
+                <p class="result approved">Plain light-coloured background</p>
             </li>
             <li>
                 <img src="/public/images/image-m2-textured-background.jpg" alt="">
@@ -41,7 +41,7 @@
         <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/image-m1-plain.jpg" alt="">
-                <p class="result approved">Approved</p>
+                <p class="result approved">Even lighting and no shadow</p>
             </li>
             <li>
                 <img src="/public/images/image-m1-uneven-harsh.jpg" alt="">
@@ -85,11 +85,11 @@
             </li>
             <li>
                 <img src="/public/images/image-f1-smiling.jpg" alt="">
-                <p class="result failed">Don’t smile</p>
+                <p class="result failed">Smiling</p>
             </li>
             <li>
                 <img src="/public/images/image-f1-mouth-open.jpg" alt="">
-                <p class="result failed">Keep your mouth closed</p>
+                <p class="result failed">Looking away from camera</p>
             </li>
         </ul>
 
@@ -107,11 +107,11 @@
             </li>
             <li>
                 <img src="/public/images/image-m3-head-covering.jpg" alt="">
-                <p class="result failed">No fashion headwear</p>
+                <p class="result failed">Fashion hair accessories</p>
             </li>
             <li>
                 <img src="/public/images/image-f1-hair-accessory.jpg" alt="">
-                <p class="result failed">No hair accessories</p>
+                <p class="result failed">Fashion headwear</p>
             </li>
         </ul>
 
@@ -136,11 +136,11 @@
             </li>
             <li>
                 <img src="/public/images/image-m2-glasses-tinted-covering-eyes.jpg" alt="">
-                <p class="result failed">Don’t cover eyes with glasses</p>
+                <p class="result failed">Glasses covering eyes</p>
             </li>
             <li>
                 <img src="/public/images/image-m2-glasses-reflection.jpg" alt="">
-                <p class="result failed">No glare on glasses</p>
+                <p class="result failed">Hair covering eyes</p>
             </li>
         </ul>
 
@@ -166,7 +166,7 @@
         <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/image-m2-plain.jpg" alt="">
-                <p class="result approved">Approved</p>
+                <p class="result approved">Plain light-coloured background</p>
             </li>
             <li>
                 <img src="/public/images/image-m2-textured-background.jpg" alt="">
@@ -189,7 +189,7 @@
         <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/image-m1-plain.jpg" alt="">
-                <p class="result approved">Approved</p>
+                <p class="result approved">Even lighting and no shadow</p>
             </li>
             <li>
                 <img src="/public/images/image-m1-uneven-harsh.jpg" alt="">
@@ -233,11 +233,11 @@
             </li>
             <li>
                 <img src="/public/images/image-f1-smiling.jpg" alt="">
-                <p class="result failed">Don’t smile</p>
+                <p class="result failed">Smiling</p>
             </li>
             <li>
                 <img src="/public/images/image-f1-mouth-open.jpg" alt="">
-                <p class="result failed">Keep your mouth closed</p>
+                <p class="result failed">Looking away from camera</p>
             </li>
         </ul>
 
@@ -255,11 +255,11 @@
             </li>
             <li>
                 <img src="/public/images/image-m3-head-covering.jpg" alt="">
-                <p class="result failed">No fashion headwear</p>
+                <p class="result failed">Fashion hair accessories</p>
             </li>
             <li>
                 <img src="/public/images/image-f1-hair-accessory.jpg" alt="">
-                <p class="result failed">No hair accessories</p>
+                <p class="result failed">Fashion headwear</p>
             </li>
         </ul>
 
@@ -284,11 +284,11 @@
             </li>
             <li>
                 <img src="/public/images/image-m2-glasses-tinted-covering-eyes.jpg" alt="">
-                <p class="result failed">Don’t cover eyes with glasses</p>
+                <p class="result failed">Glasses covering eyes</p>
             </li>
             <li>
                 <img src="/public/images/image-m2-glasses-reflection.jpg" alt="">
-                <p class="result failed">No glare on glasses</p>
+                <p class="result failed">Hair covering eyes</p>
             </li>
         </ul>
 
@@ -326,15 +326,15 @@
         <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/image-child-1.jpg" alt="">
-                <p class="result approved">Approved</p>
+                <p class="result approved">Plain light-coloured background</p>
             </li>
             <li>
                 <img src="/public/images/image-child-2.jpg" alt="">
-                <p class="result failed">No dummies</p>
+                <p class="result failed">Holding a toy</p>
             </li>
             <li>
                 <img src="/public/images/image-child-3.jpg" alt="">
-                <p class="result failed">1 person only in photo</p>
+                <p class="result failed">Object in background</p>
             </li>
         </ul>
 
@@ -349,7 +349,7 @@
         <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/image-m1-plain.jpg" alt="">
-                <p class="result approved">Approved</p>
+                <p class="result approved">Even lighting and no shadow</p>
             </li>
             <li>
                 <img src="/public/images/image-m1-uneven-harsh.jpg" alt="">
@@ -376,9 +376,18 @@
             <li>lay them on a plain light-coloured sheet and take the photo from above</li>
         </ul>
 
-        <ul class="photo-guide-photos large" aria-hidden="true">
+        <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/good-passport-photo.jpg" alt="">
+                <p class="result approved">Plain light-coloured background</p>
+            </li>
+            <li>
+                <img src="/public/images/good-passport-photo.jpg" alt="">
+                <p class="result failed">Dark background</p>
+            </li>
+            <li>
+                <img src="/public/images/good-passport-photo.jpg" alt="">
+                <p class="result failed">Holding a toy</p>
             </li>
         </ul>
 
@@ -404,11 +413,11 @@
             </li>
             <li>
                 <img src="/public/images/image-f1-smiling.jpg" alt="">
-                <p class="result failed">Don’t smile</p>
+                <p class="result failed">Smiling</p>
             </li>
             <li>
                 <img src="/public/images/image-f1-mouth-open.jpg" alt="">
-                <p class="result failed">Keep your mouth closed</p>
+                <p class="result failed">Looking away from camera</p>
             </li>
         </ul>
 
@@ -426,11 +435,11 @@
             </li>
             <li>
                 <img src="/public/images/image-m3-head-covering.jpg" alt="">
-                <p class="result failed">No fashion headwear</p>
+                <p class="result failed">Fashion hair accessories</p>
             </li>
             <li>
                 <img src="/public/images/image-f1-hair-accessory.jpg" alt="">
-                <p class="result failed">No hair accessories</p>
+                <p class="result failed">Fashion headwear</p>
             </li>
         </ul>
 
@@ -461,12 +470,12 @@
             <li>
                 <img src="/public/images/image-m2-glasses-tinted-covering-eyes.jpg"
                         alt="">
-                <p class="result failed">Don’t cover eyes with glasses</p>
+                <p class="result failed">Glasses covering eyes</p>
             </li>
             <li>
                 <img src="/public/images/image-m2-glasses-reflection.jpg"
                         alt="">
-                <p class="result failed">No glare on glasses</p>
+                <p class="result failed">Hair covering eyes</p>
             </li>
         </ul>
 
@@ -490,15 +499,15 @@
         <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/image-child-1.jpg" alt="">
-                <p class="result approved">Approved</p>
+                <p class="result approved">Plain light-coloured background</p>
             </li>
             <li>
                 <img src="/public/images/image-child-2.jpg" alt="">
-                <p class="result failed">No dummies</p>
+                <p class="result failed">Object in background</p>
             </li>
             <li>
                 <img src="/public/images/image-child-3.jpg" alt="">
-                <p class="result failed">1 person only in photo</p>
+                <p class="result failed">Someone else in background</p>
             </li>
         </ul>
 
@@ -513,7 +522,7 @@
         <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/image-m1-plain.jpg" alt="">
-                <p class="result approved">Approved</p>
+                <p class="result approved">Even lighting and no shadow</p>
             </li>
             <li>
                 <img src="/public/images/image-m1-uneven-harsh.jpg" alt="">
@@ -540,9 +549,18 @@
             <li>lay them on a plain light-coloured sheet and take the photo from above</li>
         </ul>
 
-        <ul class="photo-guide-photos large" aria-hidden="true">
+        <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/good-passport-photo.jpg" alt="">
+                <p class="result approved">Plain light-coloured background</p>
+            </li>
+            <li>
+                <img src="/public/images/good-passport-photo.jpg" alt="">
+                <p class="result failed">Dark background</p>
+            </li>
+            <li>
+                <img src="/public/images/good-passport-photo.jpg" alt="">
+                <p class="result failed">Holding a toy</p>
             </li>
         </ul>
 
@@ -564,15 +582,15 @@
         <ul class="photo-guide-photos" aria-hidden="true">
             <li>
                 <img src="/public/images/image-f1-plain.jpg" alt="">
-                <p class="result approved">Plain expression</p>
+                <p class="result approved">Not a plain expression (if under 6)</p>
             </li>
             <li>
                 <img src="/public/images/image-f1-smiling.jpg" alt="">
-                <p class="result failed">Don’t smile</p>
+                <p class="result failed">Smiling</p>
             </li>
             <li>
                 <img src="/public/images/image-f1-mouth-open.jpg" alt="">
-                <p class="result failed">Keep your mouth closed</p>
+                <p class="result failed">Looking away from camera</p>
             </li>
         </ul>
 
@@ -590,11 +608,11 @@
             </li>
             <li>
                 <img src="/public/images/image-m3-head-covering.jpg" alt="">
-                <p class="result failed">No fashion headwear</p>
+                <p class="result failed">Fashion headwear</p>
             </li>
             <li>
                 <img src="/public/images/image-f1-hair-accessory.jpg" alt="">
-                <p class="result failed">No hair accessories</p>
+                <p class="result failed">Fashion hair accessories</p>
             </li>
         </ul>
 
@@ -625,12 +643,12 @@
             <li>
                 <img src="/public/images/image-m2-glasses-tinted-covering-eyes.jpg"
                         alt="">
-                <p class="result failed">Don’t cover eyes with glasses</p>
+                <p class="result failed">Hair covering eyes</p>
             </li>
             <li>
                 <img src="/public/images/image-m2-glasses-reflection.jpg"
                         alt="">
-                <p class="result failed">No glare on glasses</p>
+                <p class="result failed">Glasses covering eyes</p>
             </li>
         </ul>
 
