--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -10,5 +10,5 @@
 <script src="/public/javascripts/application.js"></script>
 
 
-<script src="/public/javascripts/auto-fill-data.js"></script>
-<script src="/public/javascripts/auto-fill.js"></script>
+{# <script src="/public/javascripts/auto-fill-data.js"></script>
+<script src="/public/javascripts/auto-fill.js"></script> #}
