refactor 'dps-damaged' page to move reveal text before the continue button

--- a/app/views/DPS/dps-damaged.html
+++ b/app/views/DPS/dps-damaged.html
@@ -19,9 +19,22 @@
             }]
         }) }}
 
+    {% call hmpoDetails({ summaryText: "What kind of damage matters?" }) %}
+        <p>HM Passport Office classes your passport as damaged if:</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>you can’t read any of your details</li>
+            <li>the laminate cover has come away</li>
+            <li>there’s an ink or chemical spillage on any of the pages</li>
+            <li>there’s discolouring of your personal details (for example your name or date of birth) or on the official observations page</li>
+            <li>any of the pages are ripped, missing or detached</li>
+            <li>the chip is damaged or showing through the back cover (e-passports only)</li>
+            <li>there’s any damage to the back cover (for example ripped, bite marks or staple holes)</li>
+            <li>there’s excess water damage</li>
+        </ul>
+    {% endcall %}
+
         {{ hmpoSubmit(ctx) }}
 
     {% endcall %}
-
 
 {% endblock %}
