Changes for DPS journey - refactor 'steps.js' to set DPS routing logic - refactor 'apply.js' to filter out passports issued before 2002 (csig required) - refactor html pages below to allow DPS dynamic content

--- a/app/views/apply/cost.html
+++ b/app/views/apply/cost.html
@@ -46,7 +46,6 @@
     {% if values.dps === true%}
         {{ govukSummaryList({ rows: [
             {
-                key: { text: " New passport" },
                 key: { text: "Passport size" },
                 value: { html:
                     (
@@ -61,11 +60,10 @@
             },
             {
                 key: { text: "Total" },
-                value: { html:
-                    (values.passportCost | currency)
-                }
+                value: { text: values.passportCost | currency }
             }
-        ] }) }}
+        ] | filter }) }}
+
     {% else %}
         {{ govukSummaryList({ rows: [
             {
