Changes for DPS journey - refactor 'steps.js' to set DPS routing logic - refactor 'apply.js' to filter out passports issued before 2002 (csig required) - refactor html pages below to allow DPS dynamic content

--- a/app/views/DPS/dps-damaged.html
+++ b/app/views/DPS/dps-damaged.html
@@ -7,7 +7,7 @@
     {% call hmpoForm(ctx) %}
 
         {{ hmpoRadios(ctx, {
-            id: "dpsDamaged",
+            id: "damaged",
             legend: {
                 text: hmpoTitle
             },
