--- a/app/views/index.html
+++ b/app/views/index.html
@@ -80,8 +80,6 @@
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-    <p><a href="/DPS/dps-start">DPS</a></p>
-
     <h2>Tracking</h2>
     <p>User journeys for tracking, without going through the main journey.</p>
 
@@ -119,6 +117,16 @@
     </ul>
 
      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+    <h2>Urgent services</h2>
+    <p> Urgent user journeys.</p>
+
+    <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/DPS/dps-start">Online Premium service (DPS)</a></li>
+    </ul>
+
+    {# <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
 
     <h2>Countersignatures</h2>
     <p>User journeys for countersignatures.</p>
