--- a/app/views/index.html
+++ b/app/views/index.html
@@ -119,7 +119,7 @@
      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
     <h2>Urgent services</h2>
-    <p> Urgent user journeys.</p>
+    <p> Urgent services user journeys.</p>
 
     <ul class="govuk-list govuk-list--bullet">
     <li><a href="/DPS/dps-start">Online Premium service (DPS)</a></li>
