--- a/app/views/DPS/dps-not-eligible.html
+++ b/app/views/DPS/dps-not-eligible.html
@@ -5,5 +5,5 @@
 {% block mainContent %}
     <h1>{{ hmpoTitle }}</h1>
     <p>Online Premium is a new service - it’s only available for some kinds of applications.</p>
-    <p>To get your passport urgently, you need to apply with <a href="https://www.gov.uk/get-a-passport-urgently">Paper Premium (1 day) or Fast Track (1 week)</a></p>
+    <p>To get your passport urgently, you need to apply with <a href="https://www.gov.uk/get-a-passport-urgently">Paper Premium (1 day) or Fast Track (1 week)</a>.</p>
 {% endblock %}
