--- a/app/views/index.html
+++ b/app/views/index.html
@@ -122,7 +122,7 @@
     <p> Urgent services user journeys.</p>
 
     <ul class="govuk-list govuk-list--bullet">
-    <li><a href="/dps/dps-start">Online Premium service (DPS)</a></li>
+    <li><a href="/DPS/dps-start">Online Premium service (DPS)</a></li>
     </ul>
 
     {# <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
